globus-dsi-rest (0.39-1+gt6.@distro@) @distro@; urgency=low

  * Fix race on thread creation
  * Clean up memory usage in tests

 -- Globus Toolkit <support@globus.org>  Fri, 05 Oct 2018 09:46:41 -0400

globus-dsi-rest (0.38-1+gt6.@distro@) @distro@; urgency=low

  * Improve testing error for restartability.
  * Improve logging
  * When HTTP GET returns an error, don't send it on a data channel

 -- Globus Toolkit <support@globus.org>  Tue, 28 Nov 2017 14:10:23 +0000

globus-dsi-rest (0.37-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash when pending buffers are registered and an error occurs

 -- Globus Toolkit <support@globus.org>  Wed, 08 Nov 2017 18:13:01 +0000

globus-dsi-rest (0.36-1+gt6.@distro@) @distro@; urgency=low

  * Fix leaks
  * Handle error registering GridFTP reads

 -- Globus Toolkit <support@globus.org>  Fri, 22 Sep 2017 14:40:23 -0400

globus-dsi-rest (0.35-1+gt6.@distro@) @distro@; urgency=low

  * Fix upload byte counting

 -- Globus Toolkit <support@globus.org>  Thu, 31 Aug 2017 08:51:58 -0400

globus-dsi-rest (0.34-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash when reusing multipart args between requests

 -- Globus Toolkit <support@globus.org>  Wed, 16 Aug 2017 10:37:21 -0400

globus-dsi-rest (0.33-1+gt6.@distro@) @distro@; urgency=low

  * Fix leak when using gridftp_ops

 -- Globus Toolkit <support@globus.org>  Fri, 14 Jul 2017 16:33:43 -0400

globus-dsi-rest (0.32-1+gt6.@distro@) @distro@; urgency=low

  * More test script fixes to use a CA certificate

 -- Globus Toolkit <support@globus.org>  Fri, 19 May 2017 14:16:14 -0400

globus-dsi-rest (0.31-1+gt6.@distro@) @distro@; urgency=low

  * Fix test script to work with OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Thu, 18 May 2017 15:00:33 -0400

globus-dsi-rest (0.30-1+gt6.@distro@) @distro@; urgency=low

  * Fix memory buffer misuse

 -- Globus Toolkit <support@globus.org>  Mon, 17 Apr 2017 09:47:21 -0400

globus-dsi-rest (0.29-1+gt6.@distro@) @distro@; urgency=low
