@@ -1,6 +1,6 @@
 Name:           globus-dsi-rest
 %global _name %(tr - _ <<< %{name})
-Version:	0.39
+Version:	0.40
 Release:        1%{?dist}
 Vendor:		Globus Support
 Summary:        GridFTP DSI REST Helper API
@@ -92,7 +92,7 @@ GridFTP DSI REST Helper API Documentation
 
 %configure --disable-static --docdir=%{_docdir}/%{name} --includedir=%{_includedir}/globus --sysconfdir=%{_sysconfdir}/globus --enable-silent-rules -q
 
-make %{?_smp_mflags}
+make %{?_smp_mflags} %{GLOBUS_FLAGS}
 %install
 rm -rf $RPM_BUILD_ROOT
 
@@ -127,6 +127,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc %{_docdir}/globus-dsi-rest/html/*
 
 %changelog
+* Wed Oct 10 2018  Globus Toolkit <support@globus.org> - 0.40-1
+- Fix deadlock when write_gridftp_op is unable to register any reads
+
 * Fri Oct 05 2018  Globus Toolkit <support@globus.org> - 0.39-1
 - Fix race on thread creation
 - Clean up memory usage in tests
